final udid magic

--- a/public/r6x9.html
+++ b/public/r6x9.html
@@ -20,7 +20,7 @@ if (autoUdid) {
 
   <div class="container">
     <h2>R6X9 CODM</h2>
-    <a href="/profiles/gbox.mobileconfig" class="get-udid" download>Get UDID (GBox Method)</a>
+    <a href="/profiles/gbox.mobileconfig" class="get-udid" download>Get UDID</a>
     <input type="text" id="udid" placeholder="Enter UDID">
     <input type="text" id="auth-code" placeholder="Enter Authorization Code">
     <button class="btn" onclick="checkAuth('r6x9')">Verify & Install</button>
