--- a/public/cloud.html
+++ b/public/cloud.html
@@ -20,13 +20,19 @@ if (autoUdid) {
 
   <div class="container">
     <h2>Cloud CODM</h2>
-   <a href="/profiles/gbox.mobileconfig" class="get-udid" download>Get UDID</a>
+  <a href="/profiles/signit.mobileconfig" class="get-udid" download>Get UDID</a>
     <input type="text" id="udid" placeholder="Enter UDID">
     <input type="text" id="auth-code" placeholder="Enter Authorization Code">
     <button class="btn" onclick="checkAuth('cloud')">Verify & Install</button>
     <p id="result"></p>
   </div>
-
+<script>
+  if (location.hash === '#auto') {
+    const udid = new URLSearchParams(location.search).get('udid');
+    document.getElementById('udid').value = udid;
+    document.getElementById('result').innerHTML = '<b style="color:lime">UDID AUTO-FILLED! ✅</b>';
+  }
+</script>
   <script src="script.js"></script>
 </body>
 </html>
